undo fix for clipped dropdowns as they are causing other problems

--- a/frontend/css/components/_room.scss
+++ b/frontend/css/components/_room.scss
@@ -5,11 +5,6 @@
   }
 }
 
-.room-users .dropdown {
-  // Fix issues with dropdowns getting clipped by the panel
-  position: absolute;
-}
-
 .room-logs {
   .panel-body {
     padding: 5px 20px 5px 10px;
